# 1145-contract

./: .gitignore  .npmrc.example  ARCHITECTURE.md  CLAUDE.md  Makefile  PROMPT.md  README.md  SUMMARY.md  buf.gen.yaml  codegen.ts  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.json
.claude/skills/seam-contracts/: SKILL.md
graphql/: appsync-aws.graphql  schema.graphql
openapi/: openapi.yaml
proto/: buf.yaml
proto/alchemist/v0/: ac2.proto  domain.proto  se1.proto
python/alchemist_contracts/: __init__.py
scripts/: make-barrels.mjs
